Change Container-container gap to 32px (Was not displaying correctly on website launch)

--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ a{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 48px;
+    gap: 32px;
 }
 
 .img-container{
